
ACLOCAL_AMFLAGS = -I m4

DISTCHECK_CONFIGURE_FLAGS = --enable-gcc-wall --enable-gcc-werror --enable-as-needed

include %D%/src/include/Makefile.am
include %D%/src/lib/utils/Makefile.am
include %D%/src/lib/dbus/Makefile.am
include %D%/src/lib/shared/Makefile.am
include %D%/src/bin/daemon/Makefile.am
include %D%/src/bin/service/Makefile.am
include %D%/data/dbus/Makefile.am

